[package]
name = "noxy"
version = "0.1.0"
edition = "2021"
description = "Библиотека для создания P2P децентрализованных приложений и блокчейнов"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
repository = "https://github.com/yourusername/rustp2p"
readme = "README.md"
keywords = ["p2p", "blockchain", "decentralized", "networking", "distributed"]
categories = ["network-programming", "cryptography"]

[dependencies]
# Сетевые зависимости
tokio = { version = "1.32", features = ["full"] }
libp2p = { version = "0.52", features = ["tcp", "websocket", "noise", "mdns", "kad", "mplex", "yamux", "identify"] }
futures = "0.3"

# Криптографические зависимости
ed25519-dalek = "2.0"
x25519-dalek = "2.0"
sha2 = "0.10"
blake3 = "1.4"
rand = "0.8"
hex = "0.4"

# Сериализация/десериализация
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Утилиты
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile = "3.8"
criterion = "0.5"
mockall = "0.11"

[[bench]]
name = "network_bench"
harness = false

[[example]]
name = "simple"
path = "examples/simple.rs"

[[example]]
name = "blockchain"
path = "examples/blockchain.rs"
